# gtest-strace

./: CMakeLists.txt  README.md  main.cpp
include/gtest-strace/: gtest-strace.hpp
include/gtest-strace/impl/: linux-ptrace.hpp
include/gtest-strace/impl/util/: expected-assertion.hpp  expected.hpp
